--- a/sass/utils/_grid.scss
+++ b/sass/utils/_grid.scss
@@ -4,6 +4,7 @@ $horz-spacing-unit: 1rem;
 $xs: 600px;
 $sm: 768px;
 $md: 1024px;
+$lg: 1200px;
 
 $susy: (
   columns: 12,
